--- a/Main.ui
+++ b/Main.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1217</width>
-    <height>673</height>
+    <height>677</height>
    </rect>
   </property>
   <property name="font">
@@ -37,6 +37,9 @@
       <pointsize>10</pointsize>
      </font>
     </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectRows</enum>
+    </property>
     <property name="sortingEnabled">
      <bool>true</bool>
     </property>
@@ -60,6 +63,9 @@
      <font>
       <family>맑은 고딕</family>
      </font>
+    </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectRows</enum>
     </property>
     <property name="sortingEnabled">
      <bool>true</bool>
@@ -376,7 +382,7 @@
     <property name="geometry">
      <rect>
       <x>560</x>
-      <y>19</y>
+      <y>16</y>
       <width>181</width>
       <height>21</height>
      </rect>
@@ -447,10 +453,10 @@
     <widget class="QCheckBox" name="cboxAll">
      <property name="geometry">
       <rect>
-       <x>12</x>
-       <y>88</y>
-       <width>111</width>
-       <height>16</height>
+       <x>40</x>
+       <y>71</y>
+       <width>141</width>
+       <height>20</height>
       </rect>
      </property>
      <property name="font">
@@ -461,7 +467,7 @@
       </font>
      </property>
      <property name="text">
-      <string>전체 선택</string>
+      <string>전체 선택/해제</string>
      </property>
      <property name="checked">
       <bool>true</bool>
@@ -474,7 +480,7 @@
      <property name="geometry">
       <rect>
        <x>12</x>
-       <y>148</y>
+       <y>126</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -497,7 +503,7 @@
      <property name="geometry">
       <rect>
        <x>111</x>
-       <y>117</y>
+       <y>126</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -520,7 +526,7 @@
      <property name="geometry">
       <rect>
        <x>111</x>
-       <y>88</y>
+       <y>99</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -543,7 +549,7 @@
      <property name="geometry">
       <rect>
        <x>12</x>
-       <y>177</y>
+       <y>152</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -566,7 +572,7 @@
      <property name="geometry">
       <rect>
        <x>111</x>
-       <y>177</y>
+       <y>179</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -589,7 +595,7 @@
      <property name="geometry">
       <rect>
        <x>12</x>
-       <y>117</y>
+       <y>99</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -612,7 +618,7 @@
      <property name="geometry">
       <rect>
        <x>111</x>
-       <y>147</y>
+       <y>152</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -635,7 +641,7 @@
      <property name="geometry">
       <rect>
        <x>12</x>
-       <y>207</y>
+       <y>179</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -658,7 +664,7 @@
      <property name="geometry">
       <rect>
        <x>111</x>
-       <y>237</y>
+       <y>233</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -681,7 +687,7 @@
      <property name="geometry">
       <rect>
        <x>12</x>
-       <y>237</y>
+       <y>206</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -704,7 +710,7 @@
      <property name="geometry">
       <rect>
        <x>111</x>
-       <y>207</y>
+       <y>206</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -727,7 +733,7 @@
      <property name="geometry">
       <rect>
        <x>12</x>
-       <y>267</y>
+       <y>233</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -750,7 +756,7 @@
      <property name="geometry">
       <rect>
        <x>111</x>
-       <y>267</y>
+       <y>260</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -773,7 +779,7 @@
      <property name="geometry">
       <rect>
        <x>111</x>
-       <y>328</y>
+       <y>315</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -796,7 +802,7 @@
      <property name="geometry">
       <rect>
        <x>12</x>
-       <y>298</y>
+       <y>260</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -819,7 +825,7 @@
      <property name="geometry">
       <rect>
        <x>111</x>
-       <y>298</y>
+       <y>288</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -842,7 +848,7 @@
      <property name="geometry">
       <rect>
        <x>12</x>
-       <y>328</y>
+       <y>288</y>
        <width>111</width>
        <height>16</height>
       </rect>
@@ -870,7 +876,7 @@
      <property name="font">
       <font>
        <family>굴림</family>
-       <pointsize>12</pointsize>
+       <pointsize>11</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -882,10 +888,10 @@
       <number>0</number>
      </property>
      <property name="maxVisibleItems">
-      <number>5</number>
+      <number>6</number>
      </property>
      <property name="maxCount">
-      <number>5</number>
+      <number>6</number>
      </property>
      <property name="insertPolicy">
       <enum>QComboBox::NoInsert</enum>
@@ -909,24 +915,98 @@
      </item>
      <item>
       <property name="text">
-       <string>보유 중</string>
+       <string>보유</string>
       </property>
      </item>
      <item>
       <property name="text">
-       <string>익절 슬롯</string>
+       <string>익절</string>
       </property>
      </item>
      <item>
       <property name="text">
-       <string>구매 대기 중</string>
+       <string>구매 대기</string>
       </property>
      </item>
      <item>
       <property name="text">
-       <string>보유+익절</string>
+       <string>보유 + 구매 대기</string>
       </property>
      </item>
+     <item>
+      <property name="text">
+       <string>보유 + 익절</string>
+      </property>
+     </item>
+    </widget>
+    <widget class="QCheckBox" name="cboxMco">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>12</x>
+       <y>312</y>
+       <width>111</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>HY그래픽M</family>
+       <pointsize>11</pointsize>
+       <kerning>false</kerning>
+      </font>
+     </property>
+     <property name="text">
+      <string>모나코</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="cboxOmg">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>12</x>
+       <y>340</y>
+       <width>111</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>HY그래픽M</family>
+       <pointsize>11</pointsize>
+       <kerning>false</kerning>
+      </font>
+     </property>
+     <property name="text">
+      <string>오미세고</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="cboxKnc">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>111</x>
+       <y>340</y>
+       <width>111</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>HY그래픽M</family>
+       <pointsize>11</pointsize>
+       <kerning>false</kerning>
+      </font>
+     </property>
+     <property name="text">
+      <string>카이버 넷</string>
+     </property>
     </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_3">
@@ -1767,6 +1847,27 @@
     </property>
     <property name="alignment">
      <set>Qt::AlignJustify|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnReset">
+    <property name="geometry">
+     <rect>
+      <x>830</x>
+      <y>10</y>
+      <width>171</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Kalinga</family>
+      <pointsize>11</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>전체 초기화</string>
     </property>
    </widget>
   </widget>
